# kub-health

./: .gitignore  README.md  pyproject.toml
kub_health/: __init__.py  cli.py  config.py  k8s_client.py  models.py  output.py
kub_health/ai/: __init__.py  analyzer.py
kub_health/checks/: __init__.py  deployments.py  events.py  networking.py  nodes.py  pods.py  rbac.py  resources.py  storage.py
kub_health/collector/: __init__.py  snapshot.py
kub_health/correlator/: __init__.py  dependency_graph.py  engine.py  timeline.py
tests/: conftest.py  test_correlation_engine.py  test_dependency_graph.py  test_models.py  test_pod_checks.py
